--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email: contact@example.com</p>
+        </address>
+        <p>Copyright © 2024 Outdoor Adventure</p>
+    </footer>
     
 </body>
 </html>
