--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="Header2">
             <h3>Explore the Colourful World</h3>
-            <span></span>
+            <span class="separator"></span>
             <h1>A Wonderful Gift</h1>
             <button type="submit">LEARN MORE</button>
             
