--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <main>
         <section class="banner">
-            <div id="quote"><img src="./Images/invisible-thing.png" alt="guillemet" height="72px" width="94px">
+            <div id="quote"><img src="./Images/invisible-thing.png" alt="guillemet">
             </div>
             <div class="citation">
                 <p><q>Fuerat aestu carentem habentia spectent tonitrua mutastis locavit liberioris.</q></p>
