--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="#services">Services</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -55,6 +55,7 @@
                 <p> - Adam Sendler</p>
             </div>
         </section>
+        
         <section class="evenement">
             <div class="evenement section">
                 <h2>Upcoming Events</h2>
@@ -85,9 +86,9 @@
                 </div>
             </div>
         </section>
+
         <section class="bg-fix">
             <div class="bg-fix-1">
-
             </div>
             <div class="bg-fix-2">
                 <h2>Explore The World</h2>
