--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="project.html">Projects</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <button type="submit"><div id="Take-Action"><a href="#">TAKE ACTION</a></div></button>
