--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="project.html">Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <button type="submit">
@@ -66,6 +66,12 @@
             <h5>Call Us</h5>
             <p><a href="tel:+800-123-456"></a>800-123-456</p>
             <h5>Follow Us</h5>
+            <div id="logo">
+
+                <p><span><img src="./Images/fb.png" alt="facebook logo"></span></p>
+                <p><span><img src="./Images/twitter.png" alt="twitter logo"></span></p>
+                <p><span><img src="./Images/youtube.png" alt="youtube logo"></span></p>
+            </div>
         </div>
     </main>
     <footer> <!--balises appropriées-->
