--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <h4>Everest Camp Trek</h4>
                         <p>Fuerat aestu carentem habentia spectent tonitrua mutastis locavit liberioris inistra possedit.</p>
                         <button type="submit">
-                            <a href="#">LEARN MORE</a>
-                            <i>&#8702</i>
+                            <a href="#">LEARN MORE&#x00a0</a>
+                            <i>&#x00a0&#8702</i>
                         </button>
                     </div>
                     <div class="evt2">
@@ -79,8 +79,8 @@
                         <h4>Walking Holidays</h4>
                         <p>Fuerat aestu carentem habentia spectent tonitrua mutastis locavit liberioris inistra possedit.</p>
                         <button type="submit">
-                            <a href="#">LEARN MORE</a>
-                            <i class="fa fa-long-arrow-right">&#8702</i>
+                            <a href="#">LEARN MORE&#x00a0</a>
+                            <i class="fa fa-long-arrow-right">&#x00a0&#8702</i>
                         </button>
                     </div>
                 </div>
@@ -95,8 +95,8 @@
                 <span class="separator"></span>
                 <p>Diremit mundi mare undae nunc mixtam tanto sibi. Nubes unda concordi. Fert his. Recessit mentes praecipites locum caligine sui egens erat. Silvas caeli regna.</p>
                 <button type="submit">
-                    <a href="#">LEARN MORE </a>
-                    <i class="fa fa-long-arrow-right"> &#8702</i>
+                    <a href="#">LEARN MORE &#x00a0</a>
+                    <i class="fa fa-long-arrow-right">&#x00a0 &#8702</i>
                 </button>
             </div>
 
