--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home outdoor</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#home">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="project.html">Projects</a></li>
@@ -69,7 +70,7 @@
                         <p>Fuerat aestu carentem habentia spectent tonitrua mutastis locavit liberioris inistra possedit.</p>
                         <button type="submit">
                             <a href="#">LEARN MORE&#x00a0</a>
-                            <i>&#x00a0&#8702</i>
+                            <i class=" fa fa-long-arrow-right"></i>
                         </button>
                     </div>
                     <div class="evt2">
@@ -80,7 +81,7 @@
                         <p>Fuerat aestu carentem habentia spectent tonitrua mutastis locavit liberioris inistra possedit.</p>
                         <button type="submit">
                             <a href="#">LEARN MORE&#x00a0</a>
-                            <i class="fa fa-long-arrow-right">&#x00a0&#8702</i>
+                            <i class="fa fa-long-arrow-right"></i>
                         </button>
                     </div>
                 </div>
@@ -96,7 +97,7 @@
                 <p>Diremit mundi mare undae nunc mixtam tanto sibi. Nubes unda concordi. Fert his. Recessit mentes praecipites locum caligine sui egens erat. Silvas caeli regna.</p>
                 <button type="submit">
                     <a href="#">LEARN MORE &#x00a0</a>
-                    <i class="fa fa-long-arrow-right">&#x00a0 &#8702</i>
+                    <i class="fa fa-long-arrow-right"></i>
                 </button>
             </div>
 
