--- a/html/contact2.html
+++ b/html/contact2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tailwind</title>
+    <title>Contact</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.11.1/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -22,15 +22,15 @@
 <body class="m-0 p-0 font-['Noto_Sans'] text-base font-normal not-italic">
 
     <header
-        class="bg-[url(./images/photo-haut-page5.jpg)] p-6 bg-center bg-cover bg-blend-color  bg-[#000000c7] text-white">
+        class="bg-[url('../Images/photo-haut-page5.jpg')] p-6 bg-center bg-cover bg-blend-color  bg-[#404040] text-white">
         <nav class="flex justify-around items-center">
-            <a class="w-full max-w-40" href=""><img src="./Images/logo.png" alt="logo"></a>
+            <a class="w-full max-w-40" href="../html/index.html"><img src="../Images/logo.png" alt="logo"></a>
             <ul class="text-white-800 flex gap-9 items-center">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">projects</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a class="rounded-full  bg-[#FB2056] hover:bg-[#9b4343] px-4 py-2 font-semibold" href="">Take
                         action</a></li>
             </ul>
@@ -39,34 +39,35 @@
         <!--debut - -->
         <div class="Header2">
             <h1 class="text-center text-6xl font-[Montserrat] auto-rows-max font-bold py-[162px]">Contact Us</h1>
-            <div class="icone-menu"> &#9776 <!-- Caractère Unicode pour l'icône hamburger --></div>
+            <div class="hidden"> &#9776 <!-- Caractère Unicode pour l'icône hamburger --></div>
             <!--fin -->
         </div>
     </header>
 
-    <main class="bg-[#f0f0f0] flex gap-6  items-center space-x-3 p-10 justify-around">
+    <main class="bg-[#f0f0f0] flex gap-6  items-center space-x-3 p-20 justify-around">
         <div class="w-5/12">
             <h2 class="font-[Montserrat]auto-rows-max text-4xl font-semibold mb-6">We're Ready, Let's Talk.</h2>
             <form class="" id="formulaire" method="post" action="mon-script.php"
                 enctype="application/x-www-form-urlencoded" name="inscription">
-                <input class="text w-full min-h-10 hover:outline-offset-2 px-3 my-3 rounded" id="nom" name="nom"
+                <input class="text w-full min-h-10 hover:outline-offset-2 px-3 my-3 rounded border-2" id="nom" name="nom"
                         placeholder="Your name" required>
-                <input class="text w-full min-h-10 hover:outline-offset-2 px-3 my-3 rounded" type="email" id="email"
+                <input class="text w-full min-h-10 hover:outline-offset-2 px-3 my-3 rounded border-2" type="email" id="email"
                         name="email" placeholder="Email Address" required>
-                <textarea class="text  min-h-10 hover:outline-offset-2 px-3 my-3 rounded w-full" name="commentaire"
+                <textarea class="text  min-h-10 hover:outline-offset-2 px-3 my-3 rounded w-full border-2" name="commentaire"
                         id="commentaire" rows="6" cols="50" placeholder="Message" required></textarea>
                 <button class="rounded-full  bg-[#FB2056] hover:bg-[#9b4343] px-4 py-2 font-semibold text-white">Send Message</button>
             </form>
         </div>
 
-        <div class="flex flex-col justify-around gap-5 w-5/12">
-            <h2 class="font-[Montserrat] auto-rows-max text-4xl font-semibold mt-6">Contact Info</h2>
+        <div class="flex flex-col justify-around gap-0.5 w-5/12">
+            <h2 class="font-[Montserrat] auto-rows-max text-4xl font-semibold my-6">Contact Info</h2>
+            <h3 class="font-[Montserrat] auto-rows-max text-xl font-semibold ">Address</h3>
             <address class="mb-6 not-italic">123 Fifth Avenue, NY 10160, New York, USA</address>
-            <h3 class="font-[Montserrat] auto-rows-max text-2xl font-medium ">Email Us</h3>
+            <h3 class="font-[Montserrat] auto-rows-max text-xl font-semibold ">Email Us</h3>
             <p class="mb-6"><a class="hover:text-[#FB2056]" href="mailto:contact@example.com">contact@example.com</a></p>
-            <h3 class="font-[Montserrat] auto-rows-max text-2xl font-medium">Call Us</h3>
+            <h3 class="font-[Montserrat] auto-rows-max text-xl font-semibold">Call Us</h3>
             <p class="mb-6"><a class="hover:text-[#FB2056]" href="tel:+800-123-456">800-123-456</a></p>
-            <h3 class="font-[Montserrat] auto-rows-max text-2xl font-medium">Follow Us</h3>
+            <h3 class="font-[Montserrat] auto-rows-max text-xl font-semibold">Follow Us</h3>
             <div class=" flex items-center gap-3" id="logo">
                 <p><span><a href="contact.html"><i
                                 class="fa-brands fa-facebook bg-pink-600 w-1/10 text-white p-2 rounded-full hover:bg-[#404040]"></i></a></span>
@@ -81,7 +82,7 @@
         </div>
     </main>
     <footer class=" text-white text-sm text-center bg-[#404040] bg-400 p-[30px] "> <!--balises appropriées-->
-        <address class="font-normal">
+        <address class="font-normal not-italic">
             <p>123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email: contact@example.com</p>
         </address>
         <p>Copyright © 2024 Outdoor Adventure</p>
