--- a/html/project.html
+++ b/html/project.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Outdoor</title>
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
+<body>s
     <header> <!-- la navbar et les titres dans un bloc **header** (avec l'image en background).-->
         <!-- debut Header1 " navbar" est contituée d'une image (le logo, situé dans un lien), du menu (ul, li, a) et d'un bouton-->
         <div class="Header1">
@@ -24,7 +24,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="project.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact2.html">Contact</a></li>
                     </ul>
                 </nav>
                 <button type="submit">
