--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outdoor Adventure</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!--liens vers les ressources extérieures de la page-->
 </head>
@@ -28,7 +28,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="project.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact2.html">Contact</a></li>
                     </ul>
                 </nav>
                 <button type="submit"><div id="Take-Action"><a href="#">TAKE ACTION</a></div></button>
@@ -50,7 +50,7 @@
     </header>
     <main> <!--element unique qui indique le contenu principal de la page-->
         <section class="banner">
-            <div id="quote"><img src="./Images/invisible-thing.png" alt="guillemet"><!--Balise auto-fermante-->
+            <div id="quote"><img src="../Images/logo2.png" alt="guillemet"><!--Balise auto-fermante-->
             </div>
             <div class="citation">
                 <p><q>Fuerat aestu carentem habentia spectent tonitrua mutastis locavit liberioris.</q></p><!--imbrication des éléments : p de type bloc peut contenir q de type inline-->
@@ -125,7 +125,7 @@
     </main>
     <footer> <!--balises appropriées element qui permet d inserer une zone d'affichage pour le pied de page -->
          <!-- element dedie a inserer des adresses-->
-            <p><address>123 Fifth Avenue, NY 10160, New York, USA |</address> Phone: 800-123-456 | <address> Email: contact@example.com</address></p>
+            <p><address id="fifthavenue">123 Fifth Avenue, NY 10160, New York, USA |</address><p>Phone: 800-123-456 | </p><address> Email: contact@example.com</address></p>
         
             <p>Copyright © 2024 Outdoor Adventure</p>
     </footer>
