--- a/html/services.html
+++ b/html/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services Outdoor</title>
-    <link rel="stylesheet" href="services.css">
+    <link rel="stylesheet" href="../css/services.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="project.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact2.html">Contact</a></li>
                     </ul>
                 </nav>
                 <button type="submit">
