--- a/html/contact2.html
+++ b/html/contact2.html
@@ -24,7 +24,7 @@
     <header
         class="bg-[url('../Images/photo-haut-page5.jpg')] p-6 bg-center bg-cover bg-blend-color  bg-[#404040] text-white">
         <nav class="flex justify-around items-center">
-            <a class="w-full max-w-40" href="../html/index.html"><img src="../Images/logo.png" alt="logo"></a>
+            <a class="w-full max-w-40" href="../html/index.html"><img src="../Images/logo.png" alt="logo"><img src="../Images/black-logo2x.png" alt=""></a>
             <ul class="text-white-800 flex gap-9 items-center">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
