--- a/html/index.html
+++ b/html/index.html
@@ -125,7 +125,7 @@
          <!-- element dedie a inserer des adresses-->
             <p><address id="fifthavenue">123 Fifth Avenue, NY 10160, New York, USA |</address>
                 <p>Phone: <span>800-123-456</span> | </p>
-                <address><a href="mailto:contact@example.com ">Email: <span>contact@example.com</span></a> </address>
+                <a href="mailto:contact@example.com "><address>Email: <span>contact@example.com</span> </address></a>
             </p>
         
             <p>Copyright © 2024 Outdoor Adventure</p>
