--- a/contact2.html
+++ b/contact2.html
@@ -22,9 +22,9 @@
 <body class="m-0 p-0 font-['Noto_Sans'] text-base font-normal not-italic">
 
     <header
-        class="bg-[url('../Images/photo-haut-page5.jpg')] p-6 bg-center bg-cover bg-blend-color  bg-[#404040] text-white">
+        class="bg-[url('./Images/photo-haut-page5.jpg')] p-6 bg-center bg-cover bg-blend-color  bg-[#404040] text-white">
         <nav class="flex justify-around items-center">
-            <a class="w-full max-w-40" href="../html/index.html"><img src="../Images/logo.png" alt="logo"><img src="../Images/black-logo2x.png" alt=""></a>
+            <a class="w-full max-w-40" href="index.html"><img src="./Images/logo.png" alt="logo"><img src="./Images/black-logo2x.png" alt=""></a>
             <ul class="text-white-800 flex gap-9 items-center">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
