--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
     </main>
     <footer> <!--balises appropriées element qui permet d inserer une zone d'affichage pour le pied de page -->
          <!-- element dedie a inserer des adresses-->
-            <p><address id="fifthavenue">123 Fifth Avenue, NY 10160, New York, USA |</address>
-                <p>Phone: <span>800-123-456</span> | </p>
-                <a href="mailto:contact@example.com "><address>Email: <span>contact@example.com</span> </address></a>
+
+            <p>
+                <address id="fifthavenue">123 Fifth Avenue, NY 10160, New York, USA |
+                Phone: <span>800-123-456</span></address> | 
+                <address>Email: <a href="mailto:contact@example.com "></a><span>contact@example.com</span> </a></address>
             </p>
         
             <p>Copyright © 2024 Outdoor Adventure</p>
