--- a/contact2.html
+++ b/contact2.html
@@ -12,18 +12,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
-<!--en Tailwind - -->
 <body class="m-0 p-0 font-['Noto_Sans'] text-base font-normal not-italic">
 
     <header
         class="bg-[url('./Images/photo-haut-page5.jpg')] p-6 bg-center bg-cover bg-blend-color  bg-[#404040] text-white">
+        <!--debut - -->
         <nav class="flex justify-around items-center">
             <a class="w-full max-w-40" href="index.html"><img src="./Images/logo.png" alt="logo"><img class="hidden" src="./Images/black-logo2x.png" alt=""></a>
             <ul class="text-white-800 flex gap-9 items-center">
@@ -44,7 +44,7 @@
         </div>
     </header>
 
-    <main class="bg-[#f0f0f0] flex gap-6  items-center space-x-3 p-20 justify-around">
+    <main class="bg-[#f0f0f0] flex wrap gap-6  items-center space-x-3 p-20 justify-around">
         <div class="w-5/12">
             <h2 class="font-[Montserrat]auto-rows-max text-4xl font-semibold mb-6">We're Ready, Let's Talk.</h2>
             <form class="" id="formulaire" method="post" action="mon-script.php"
