--- a/contact3.html
+++ b/contact3.html
@@ -19,33 +19,33 @@
         rel="stylesheet">
 </head>
 
-<body class="m-0 p-0 font-['Noto_Sans'] text-base font-normal not-italic">
+<body class="m-0 p-0 font-['Noto_Sans'] text-base font-normal not-italic md:flex md:flex-col">
 
     <header
-        class=" flex justify-between  items-center  flex-wrap flex-col bg-[#f0f0f0] text-black m-0">
+        class=" flex justify-between  items-center  flex-wrap flex-col bg-[#f0f0f0] text-black m-0 md:text-white md:bg-[url('./Images/photo-haut-page5.jpg')] pb-36 bg-center bg-no-repeat bg-cover bg-blend-color  md:bg-[rgba(0,0,0,0.6)] ">
         <!--debut style initial en mobile first comme c est prevu avec tailwind - -->
-        <nav class="flex gap-4  justify-between items-center max-w-max size-full">
-            <a class="w-1/2 px-2" href="index.html"><img class="hidden" src="./Images/logo.png" alt="logoblanc"><img class="visible size full" src="./Images/black-logo2x.png" alt="logoblack"></a>
-            <ul class="text-white-800 flex  flex-col justify-between items-center size-full invisible">
-                <li><a class="hidden" href="index.html">Home</a></li>
-                <li><a class="hidden" href="about.html">About</a></li>
-                <li><a class="hidden" href="services.html">Services</a></li>
-                <li><a class="hidden" href="project.html">Projects</a></li>
-                <li><a class="hidden" href="contact3.html">Contact</a></li>
-                <li><a class="hidden rounded-full  bg-[#FB2056] hover:bg-[#9b4343] px-4 py-2 font-semibold" href="">Take
-                        action</a></li>s
+        <nav class="flex gap-4  justify-between items-center max-w-max size-full md:p-2 md:gap-56">
+            <a class="w-1/2 md:w-1/3 px-2" href="index.html"><img class="hidden md:flex" src="./Images/logo.png" alt="logoblanc"><img class="visible size full md:hidden" src="./Images/black-logo2x.png" alt="logoblack"></a>
+            <ul class="text-white-800 flex  flex-col md:flex-row justify-between items-center size-full ">
+                <li><a class="hidden md:flex" href="index.html">Home</a></li>
+                <li><a class="hidden md:flex" href="about.html">About</a></li>
+                <li><a class="hidden md:flex" href="services.html">Services</a></li>
+                <li><a class="hidden md:flex" href="project.html">Projects</a></li>
+                <li><a class="hidden md:flex" href="contact3.html">Contact</a></li>
+                <li><a class="hidden rounded-full  bg-[#FB2056] hover:bg-[#9b4343] px-4 py-2 font-semibold md:flex" href="./index.html">Take
+                        action</a></li>
                     </ul>
-                <div class="bg-[#FB2056] text-white p-2 text-xl my-2 rounded-sm mx-2"> &#9776 <!-- Caractère Unicode pour l'icône hamburger --></div>
+                <div class="bg-[#FB2056] text-white p-2 text-xl my-2 rounded-sm mx-2 md:hidden"> &#9776 <!-- Caractère Unicode pour l'icône hamburger --></div>
         </nav>
 
-        <div class="bg-[url('./Images/photo-haut-page5.jpg')] p-24 bg-center bg-no-repeat bg-cover bg-blend-color  bg-[rgba(0,0,0,0.6)]">
-            <h1 class="text-center  text-white text-3xl font-[Montserrat] auto-rows-max font-bold ">Contact Us</h1>
+        <div class="bg-[url('./Images/photo-haut-page5.jpg')] p-24 bg-center bg-no-repeat bg-cover bg-blend-color  bg-[rgba(0,0,0,0.6)]  md:bg-none md:bg-transparent">
+            <h1 class="text-center  text-white text-3xl font-[Montserrat] auto-rows-max font-bold md:text-6xl">Contact Us</h1>
             <!--fin -->
         </div>
     </header>
 
-    <main class="bg-[#f0f0f0]  flex-col flex-wrap gap-6  items-center space-x-3 p-6 justify-around">
-        <div class=" flex flex-col size-full">
+    <main class="bg-[#f0f0f0] flex flex-col flex-wrap gap-6  items-center space-x-3 p-6 justify-around md:flex-row md:gap-1">
+        <div class=" flex flex-col size-full md:w-5/12 md:flex-initial">
             <h2 class="font-[Montserrat]auto-rows-max text-2xl font-semibold mb-6">We're Ready, Let's Talk.</h2>
             <form class="" id="formulaire" method="post" action="mon-script.php"
                 enctype="application/x-www-form-urlencoded" name="inscription">
@@ -59,7 +59,7 @@
             </form>
         </div>
 
-        <div class="flex flex-col  justify-around gap-0.5 size-full">
+        <div class="flex flex-col  justify-around gap-0.5 size-full md:w-5/12">
             <h2 class="font-[Montserrat] auto-rows-max text-2xl font-semibold my-6">Contact Info</h2>
             <h3 class="font-[Montserrat] auto-rows-max text-xl font-semibold ">Address</h3>
             <address class="mb-6 not-italic">123 Fifth Avenue, NY 10160, New York, USA</address>
