--- a/contact3.html
+++ b/contact3.html
@@ -23,7 +23,7 @@
 
     <header
         class=" flex justify-between  items-center  flex-wrap flex-col bg-[#f0f0f0] text-black m-0 md:text-white md:bg-[url('./Images/photo-haut-page5.jpg')] pb-36 bg-center bg-no-repeat bg-cover bg-blend-color  md:bg-[rgba(0,0,0,0.6)] ">
-        <!--debut style initial en mobile first comme c est prevu avec tailwind - -->
+        <!--debut style initial en mobile first comme c est prevu avec tailwind  ensuite avec md on passe aux ecrans type Ipad et laptop- -->
         <nav class="flex gap-4  justify-between items-center max-w-max size-full md:p-2 md:gap-56">
             <a class="w-1/2 md:w-1/3 px-2" href="index.html"><img class="hidden md:flex" src="./Images/logo.png" alt="logoblanc"><img class="visible size full md:hidden" src="./Images/black-logo2x.png" alt="logoblack"></a>
             <ul class="text-white-800 flex  flex-col md:flex-row justify-between items-center size-full ">
